Tweaking git deploy

--- a/httpdocs/deploy.ini
+++ b/httpdocs/deploy.ini
@@ -15,7 +15,7 @@
     ; If the private key is encrypted, you must also provide the passphrase:
     ;keypass = passphrase
     host = ftp.thecomberwedding.co.uk
-    path = thecomberwedding.co.uk/public_html
+    path = /thecomberwedding.co.uk/public_html
     ;port = 22
     ; Files that should be ignored and not uploaded to your server, but still tracked in your repository
     skip[] = 'src/*.scss'
