Tweaking git deploy

--- a/deploy.ini
+++ b/deploy.ini
@@ -15,11 +15,13 @@
     ; If the private key is encrypted, you must also provide the passphrase:
     ;keypass = passphrase
     host = ftp.thecomberwedding.co.uk
-    path = /thecomberwedding.co.uk/public_html
+    path = /thecomberwedding.co.uk
     ;port = 22
     ; Files that should be ignored and not uploaded to your server, but still tracked in your repository
     skip[] = 'src/*.scss'
     skip[] = '*.ini'
+	skip[] = '.gitignore'
+	skip[] = 'contibutors.txt'
     ;purge[] = "cache/"
     ;purge[] = "/public_html/wp-content/themes/base/cache/"
     
