--- a/deploy.ini
+++ b/deploy.ini
@@ -21,7 +21,8 @@
     skip[] = 'src/*.scss'
     skip[] = '*.ini'
 	skip[] = '.gitignore'
-	skip[] = 'contibutors.txt'
+	skip[] = 'contributors.txt'
+	skip[] = '/Test'
     ;purge[] = "cache/"
     ;purge[] = "/public_html/wp-content/themes/base/cache/"
     
