Tweaking git deploy

--- a/deploy.ini
+++ b/deploy.ini
@@ -23,6 +23,7 @@
 	skip[] = '.gitignore'
 	skip[] = 'contributors.txt'
 	skip[] = '/Test'
+	skip[] = 'Testnew/'
     ;purge[] = "cache/"
     ;purge[] = "/public_html/wp-content/themes/base/cache/"
     
