Tweaking git deploy

--- a/deploy.ini
+++ b/deploy.ini
@@ -24,6 +24,7 @@
 	skip[] = 'contributors.txt'
 	skip[] = '/Test'
 	skip[] = 'Testnew/'
+	skip[] = 'Testthird/*'
     ;purge[] = "cache/"
     ;purge[] = "/public_html/wp-content/themes/base/cache/"
     
