Tweaking git deploy

--- a/deploy.ini
+++ b/deploy.ini
@@ -7,33 +7,23 @@
 [staging]
     scheme = ftp
     user = ftpadmin@2319
-    ; When connecting via SFTP, you can opt for password-based authentication:
     pass = 872543tiuh3hgo3i#832jh0q952352df
-    ; Or private key-based authentication:
-    ;pubkey  = /path/to/public/key
-    ;privkey = /path/to/private/key
-    ; If the private key is encrypted, you must also provide the passphrase:
-    ;keypass = passphrase
     host = ftp.thecomberwedding.co.uk
     path = /thecomberwedding.co.uk
-    ;port = 22
-    ; Files that should be ignored and not uploaded to your server, but still tracked in your repository
-    skip[] = 'src/*.scss'
+	
     skip[] = '*.ini'
 	skip[] = '.gitignore'
 	skip[] = 'contributors.txt'
-	skip[] = '/Test'
-	skip[] = 'Testnew/'
-	skip[] = 'Testthird/*'
-    ;purge[] = "cache/"
-    ;purge[] = "/public_html/wp-content/themes/base/cache/"
     
 [production]
-    quickmode = ftp://example:password@production-example.com:21/path/to/installation
-    passive = true
-    ; Files that should be ignored and not uploaded to your server, but still tracked in your repository
-    skip[] = 'libs/*'
-    skip[] = 'config/*'
-    skip[] = 'src/*.scss'
-    purge[] = "cache/" 
-    purge[] = "/public_html/wp-content/themes/base/cache/"
+    scheme = ftp
+    user = ftpadmin@2319
+    pass = 872543tiuh3hgo3i#832jh0q952352df
+    host = ftp.thecomberwedding.co.uk
+    path = /thecomberwedding.co.uk
+   
+    skip[] = '*.ini'
+	skip[] = '.gitignore'
+	skip[] = 'contributors.txt'
+    ;purge[] = "cache/" 
+    ;purge[] = "/thecomberwedding.co.uk/public_html/wp-content/themes/base/cache/"
