--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     "php": ">=5.4",
     "composer/installers": "~1.0.12",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "4.4.*"
+    "johnpbloch/wordpress": "4.4.*",
+    "wpackagist-plugin/advanced-custom-fields": "4.4.*"
   },
   "extra": {
     "installer-paths": {
