adding basic plugin for sit e functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Application
 public_html/app/plugins/*
 !public_html/app/plugins/.gitkeep
+!public_html/app/plugins/comber-wedding
 public_html/app/mu-plugins/*
 !public_html/app/mu-plugins/.gitkeep
 public_html/app/upgrade
