--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
     "composer/installers": "~1.0.12",
     "vlucas/phpdotenv": "^2.0.1",
     "johnpbloch/wordpress": "4.4.*",
-    "wpackagist-plugin/advanced-custom-fields": "4.4.*"
+    "wpackagist-plugin/advanced-custom-fields": "4.4.*",
+    "mailgun/mailgun-php": "~1.7.2"
   },
   "extra": {
     "installer-paths": {
