--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.8.9",
-    "gulp-browserify": "0.5.*",
-    "gulp-concat": "2.6.*",
+    "gulp-browserify": "*",
+    "gulp-concat": "^2.4.3",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^0.4.2",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.1.0",
-    "gulp-sass": "^1.3.2",
+    "gulp-sass": "*",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^1.1.0"
   },
